# NEXRAD_Precip

./: CSVDataSaver.py  main.py  pyproject.toml
config/: saluda_config.ini  saluda_config_debug.ini
config/watersheds/: Cedar Creek-Congaree River.json  Crane Creek-Broad River.json  Twelvemile Creek-Saluda River.json
