[project]
name = "saluda-precip"
version = "0.1.0"
description = ""
authors = [{ name = "DANRAMAGE", email = "ChiefDan@gmail.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "geojson>=3.1.0,<4.0.0",
    "xmrgprocessing",
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.uv.sources]
xmrgprocessing = { git = "https://github.com/DanRamage/xmrgprocessing.git" }

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.6.0",
]

[tool.uv]
package = false
